[tool.poetry]
name = "rv_ltl"
version = "0.1.0a1"
description = ""
authors = ["Shun Kashiwa <shunthedev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7, <3.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
flake8 = "^4.0.1"
pep8-naming = "^0.12.1"
autopep8 = "^1.6.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
